--- a/infra/prod/docker/Dockerfile.frontend
+++ b/infra/prod/docker/Dockerfile.frontend
@@ -2,6 +2,9 @@
 
 FROM node:20-alpine as builder
 
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@latest --activate
+
 # Build arguments
 ARG VITE_API_URL
 
@@ -9,17 +12,17 @@ ARG VITE_API_URL
 WORKDIR /app
 
 # Copy package files
-COPY frontend/package*.json ./
+COPY frontend/package.json frontend/pnpm-lock.yaml* ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN pnpm install --frozen-lockfile --prod
 
 # Copy source code
 COPY frontend .
 
 # Build the application
 ENV VITE_API_URL=$VITE_API_URL
-RUN npm run build
+RUN pnpm run build
 
 # Final stage - nginx
 FROM nginx:alpine
