--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pg-venv"
-version = "0.1.0"
+version = "0.1.1"
 description = "A smart camera roll application with vector powered semantic search"
-authors = [{name = "Carter Perez | Connor Boetig", email = "dev@pgvenv.com"}]
+authors = [{name = "Carter Perez"}]
 requires-python = ">=3.10"
 license = "MIT"
 keywords = ["fastapi", "multimodal", "search", "ai", "gemini", "openai", "vector", "memes"]
@@ -17,6 +17,8 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",    
     "Framework :: FastAPI",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
