--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@
 # Vuemantics - Dev Compose
 # ===================
 
-name: ${APP_NAME:-vuemantics-dev}
+name: ${APP_NAME:-compose}
 
 services:
   postgres:
@@ -104,7 +104,7 @@ services:
         condition: service_healthy
       ollama:
         condition: service_healthy
-    command: uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload --timeout-graceful-shutdown 2
     networks:
       - multimodal-dev
 
