--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "gunicorn==23.0.0",
     "ollama==0.6.1",
     "tenacity==8.5.0",
+    "dramatiq[redis]==1.17.0",
 ]
 
 [project.optional-dependencies]
